# ChangeLog for net-mail/dovecot
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-mail/cvs-repo/gentoo-x86/net-mail/dovecot/ChangeLog,v 1.129 2007/12/09 22:36:43 wschlich Exp $

  09 Dec 2007; Wolfram Schlich <wschlich@gentoo.org> dovecot-1.0.8.ebuild:
  ROOT fixes

  09 Dec 2007; Wolfram Schlich <wschlich@gentoo.org> dovecot-1.0.8.ebuild:
  fix bug #201686

*dovecot-1.0.8 (08 Dec 2007)

  08 Dec 2007; Wolfram Schlich <wschlich@gentoo.org> +dovecot-1.0.8.ebuild:
  version bump, add managesieve patch, small cleanups

  06 Nov 2007; Raúl Porcel <armin76@gentoo.org> dovecot-1.0.5.ebuild:
  alpha/sparc stable wrt #197388

  03 Nov 2007; Lars Weiler <pylon@gentoo.org> dovecot-1.0.5.ebuild:
  stable ppc, bug #197388

  02 Nov 2007; Roy Marples <uberlord@gentoo.org> files/dovecot.init:
  Start after ntp-client and ntp, #197872 thanks to James Pattinson

*dovecot-1.0.7 (30 Oct 2007)

  30 Oct 2007; Roy Marples <uberlord@gentoo.org> +dovecot-1.0.7.ebuild:
  Double Bump

  29 Oct 2007; Dawid Węgliński <cla@gentoo.org> dovecot-1.0.5.ebuild:
  Stable on x86 (bug #197388)

  29 Oct 2007; Daniel Gryniewicz <dang@gentoo.org> dovecot-1.0.5.ebuild:
  Marked stable on amd64 for bug #197388

*dovecot-1.0.6 (29 Oct 2007)

  29 Oct 2007; Roy Marples <uberlord@gentoo.org> +dovecot-1.0.6.ebuild:
  Bump

*dovecot-1.0.5 (10 Sep 2007)

  10 Sep 2007; Roy Marples <uberlord@gentoo.org> +dovecot-1.0.5.ebuild:
  Bump.

  24 Aug 2007; Raúl Porcel <armin76@gentoo.org> dovecot-1.0.3.ebuild:
  alpha stable wrt security #187512

  23 Aug 2007; Andrej Kacian <ticho@gentoo.org> dovecot-1.0.3.ebuild:
  Stable on x86, security bug #187512.

  23 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  dovecot-1.0.3.ebuild:
  ppc stable, bug #187512

  23 Aug 2007; Christoph Mende <angelos@gentoo.org> dovecot-1.0.3.ebuild:
  Stable on amd64 wrt security bug #187512

  23 Aug 2007; Gustavo Zacarias <gustavoz@gentoo.org> dovecot-1.0.3.ebuild: