@@ -8,6 +8,7 @@ DIST dovecot-1.0.6.tar.gz 1783566 RMD160 eb4d76e70820a4ed5f03806ad2fd6bd793a597b
 DIST dovecot-1.0.7-MANAGESIEVE-v9.diff.gz 103777 RMD160 6e8557c435b581edf89837d240eb1813bab0bff6 SHA1 d03a2f7ce12c70cbe08b118b0a03b93790c01729 SHA256 575b5a971f759aa5a0b22d0657bfed8d6bba5661e2d7823142f8fec6ed49cb88
 DIST dovecot-1.0.7.tar.gz 1783918 RMD160 94a1f99aa0c2a7c2db8a106733f2de37080fd1eb SHA1 cc5f0892f184216c24ed6cfaa9d58183d5b94a4f SHA256 7e0521a6efc94e6d3d02d172de1dd0fcd38aaccd35b05b0bb368e8919d8622f3
 DIST dovecot-1.0.8.tar.gz 1793784 RMD160 d892f958b0531b13519c03c32f74138f97b27099 SHA1 ffb71a6d1c7f6dd963cb1f7313652c7a6d1b409f SHA256 f4fa1c5c5d10b04b924f19737a74bb5d1b99b403582a38e89dc786279fcd66d1
+DIST dovecot-1.0.9.tar.gz 1796543 RMD160 535cf4c9672c8e44e751f5ffad911440707fc7d4 SHA1 87d89ff79d967c95ab8e59a1c1b3f710caffc290 SHA256 a1861f42954a5497dc27eb6549e980524f75a50a03f58ac184e1770cff8a881d
 DIST dovecot-sieve-1.0.2.tar.gz 451753 RMD160 8bed283ae672aafa61271f154f1f58d200bd4f5f SHA1 70b423eae6e47bc38f81faa36503228c1a8a5550 SHA256 9042eaf6d1237577a67ab3aa233953d640f62a296c5ffaaaed75ff25b657642a
 EBUILD dovecot-1.0.3.ebuild 6265 RMD160 589c924113f22f2d9a987bb08cde3d9af51b119d SHA1 c381fe220b91f5777b76046a2dca43e62b0ff823 SHA256 605f498e92b2d8d2bc3c56852cb5823e1c6db7f0aa8c7b7ac185096f400a5493
 MD5 0c0a8621003c8008a7b5a523e6c03d73 dovecot-1.0.3.ebuild 6265
@@ -29,10 +30,14 @@ EBUILD dovecot-1.0.8.ebuild 7098 RMD160 24781a3aaca288d704a1dbf3d3dd5efe240edbec
 MD5 7b910e8b405661b8cf8021f912e55b16 dovecot-1.0.8.ebuild 7098
 RMD160 24781a3aaca288d704a1dbf3d3dd5efe240edbec dovecot-1.0.8.ebuild 7098
 SHA256 104797ab6507ff2a720c69c52c4f172250e4f583fe9f445ad5c34cde72c09625 dovecot-1.0.8.ebuild 7098
-MISC ChangeLog 20574 RMD160 65c8a3576775d1beae7a813e077184d7940fe774 SHA1 e935e22b9bad8b63cc15c3328d77ff8ca5419df7 SHA256 83871532e6c2efd5d657a4716917652a3034b210bd55783c0aec9b42074d7d5e
-MD5 68b81a3fc21b82d9531e4cd7bff2e8b5 ChangeLog 20574
-RMD160 65c8a3576775d1beae7a813e077184d7940fe774 ChangeLog 20574
-SHA256 83871532e6c2efd5d657a4716917652a3034b210bd55783c0aec9b42074d7d5e ChangeLog 20574
+EBUILD dovecot-1.0.9.ebuild 7098 RMD160 596b1a54f98963437ffa23dc5cd0cd7e3be30f1e SHA1 bd8476a5d9545cb58d3bb7a330749653bd8cee48 SHA256 bb6a0a05c6f0c98cf335dc634b4ce5a9c2fa09779f90e396592bbd736eaf6381
+MD5 f0dc3f1164472b12da5bd0d0e6aa1c9f dovecot-1.0.9.ebuild 7098
+RMD160 596b1a54f98963437ffa23dc5cd0cd7e3be30f1e dovecot-1.0.9.ebuild 7098
+SHA256 bb6a0a05c6f0c98cf335dc634b4ce5a9c2fa09779f90e396592bbd736eaf6381 dovecot-1.0.9.ebuild 7098
+MISC ChangeLog 20696 RMD160 4a0a1c90cfcc96c6453890c6f37e61d8c3b3af2a SHA1 717073e76b03853c0e1cd0309123a36892e586b9 SHA256 9963a535d06d730e6b42f8b7f6c982c1ad9f1c1bd05438f4da64bdcf7fc8ded5
+MD5 ebb181066b6ffcff6aa2f3e124ebe44e ChangeLog 20696
+RMD160 4a0a1c90cfcc96c6453890c6f37e61d8c3b3af2a ChangeLog 20696
+SHA256 9963a535d06d730e6b42f8b7f6c982c1ad9f1c1bd05438f4da64bdcf7fc8ded5 ChangeLog 20696
 MISC metadata.xml 252 RMD160 97c0c41abc4b61586ab48653ced79067cb964aa6 SHA1 57de811cfb02936b35c4bef2108018e6b2697a99 SHA256 419ffa57f459d89a62dd42ee4bb01934f03e6913b470323f5b2b8a7c89e2dc66
 MD5 b6ff89c08602229bdd234da83a89df77 metadata.xml 252
 RMD160 97c0c41abc4b61586ab48653ced79067cb964aa6 metadata.xml 252
@@ -52,3 +57,6 @@ SHA256 38d3b54a719fb905e8e78b84c57c74cb7ee7da0d3f758be2a7fbba14c93dc615 files/di
 MD5 608ed39e2e1e682a5de69655b67dc258 files/digest-dovecot-1.0.8 792
 RMD160 a4f6e9874a5e2d61086902b2ca0400d409adf9d2 files/digest-dovecot-1.0.8 792
 SHA256 0d2d481acb31a53b54835c80db254dfbeeeea183e26a5af331cef0480339084f files/digest-dovecot-1.0.8 792
+MD5 268a4c25332bd441418881949bdd5f6b files/digest-dovecot-1.0.9 792
+RMD160 400008cf0c85a945e60bfd570a42ec13555ad13d files/digest-dovecot-1.0.9 792
+SHA256 305a490145cfd5055caba4fecfd604baeec315b049b815783d2c1dd04184cf35 files/digest-dovecot-1.0.9 792
