@@ -1,0 +1,9 @@
+MD5 52ee240e7ab9d63b047bcdf636d1fa8b dovecot-1.0.7-MANAGESIEVE-v9.diff.gz 103777
+RMD160 6e8557c435b581edf89837d240eb1813bab0bff6 dovecot-1.0.7-MANAGESIEVE-v9.diff.gz 103777
+SHA256 575b5a971f759aa5a0b22d0657bfed8d6bba5661e2d7823142f8fec6ed49cb88 dovecot-1.0.7-MANAGESIEVE-v9.diff.gz 103777
+MD5 fdd490b72fee9b99da972ddb69f4b58d dovecot-1.0.9.tar.gz 1796543
+RMD160 535cf4c9672c8e44e751f5ffad911440707fc7d4 dovecot-1.0.9.tar.gz 1796543
+SHA256 a1861f42954a5497dc27eb6549e980524f75a50a03f58ac184e1770cff8a881d dovecot-1.0.9.tar.gz 1796543
+MD5 508926fc9ff8e0f6e13506e237d4916b dovecot-sieve-1.0.2.tar.gz 451753
+RMD160 8bed283ae672aafa61271f154f1f58d200bd4f5f dovecot-sieve-1.0.2.tar.gz 451753
+SHA256 9042eaf6d1237577a67ab3aa233953d640f62a296c5ffaaaed75ff25b657642a dovecot-sieve-1.0.2.tar.gz 451753
