@@ -1,6 +1,11 @@
 # ChangeLog for net-mail/dovecot
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-mail/cvs-repo/gentoo-x86/net-mail/dovecot/ChangeLog,v 1.129 2007/12/09 22:36:43 wschlich Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-mail/cvs-repo/gentoo-x86/net-mail/dovecot/ChangeLog,v 1.130 2007/12/12 17:19:37 wschlich Exp $
+
+*dovecot-1.0.9 (12 Dec 2007)
+
+  12 Dec 2007; Wolfram Schlich <wschlich@gentoo.org> +dovecot-1.0.9.ebuild:
+  version bump
 
   09 Dec 2007; Wolfram Schlich <wschlich@gentoo.org> dovecot-1.0.8.ebuild:
   ROOT fixes
